--- a/app/src/main/res/layout/activity_genre_list.xml
+++ b/app/src/main/res/layout/activity_genre_list.xml
@@ -6,6 +6,9 @@
 
     <data>
         <variable
+            name="viewmodel"
+            type="com.example.wikimusic.genre.viewmodels.GenreListViewModel" />
+        <variable
             name="adapter"
             type="com.example.wikimusic.genre.adapters.GenreListAdapter" />
         
@@ -85,6 +88,7 @@
 
 
             <ImageView
+                android:onClick="@{()->viewmodel.OnExpandClicked()}"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 app:layout_constraintVertical_bias="0.5"
