--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -18,6 +18,7 @@
         tools:context=".album.ui.AlbumListFragment">
 
        <androidx.recyclerview.widget.RecyclerView
+           android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adapter ="@{adapter}"
